Fix breaking news titles that are WHITE out on mobile device

--- a/hypster/Areas/apps/css/appSite0.css
+++ b/hypster/Areas/apps/css/appSite0.css
@@ -9058,7 +9058,7 @@ a.captionOrange:hover
 
 .brkLeftCH H2
 {
-    margin-top:28px; font-size:28px; line-height:40px; color:#FFFFFF;
+    margin-top:0px; font-size:22px; line-height:28px; color:#000000;
 }
 
 .brkLeftCH .brkngCont
