--- a/hypster/Areas/apps/css/appSite1.css
+++ b/hypster/Areas/apps/css/appSite1.css
@@ -8999,7 +8999,7 @@ a.captionOrange:hover
 
 .brkLeftCH H2
 {
-    margin-top:28px; font-size:28px; line-height:40px; color:#FFFFFF;
+    margin-top:0px; font-size:22px; line-height:28px; color:#000000;
 }
 
 .brkLeftCH .brkngCont
