--- a/hypster/Areas/apps/css/appSite2.css
+++ b/hypster/Areas/apps/css/appSite2.css
@@ -8849,7 +8849,7 @@ a.captionOrange:hover
 
 .brkLeftCH H2
 {
-    margin-top:28px; font-size:38px; line-height:40px; color:#FFFFFF;
+    margin-top:0px; font-size:38px; line-height:40px; color:#000000;
 }
 
 .brkLeftCH .brkngCont
